--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
 </head>
 <body>
   <section>
-    <h1>Sledit</h1><a class="clearLink" href="#" title="Click to clear all">clear</a>
+    <h1>Sledit</h1><a class="clearLink" href="#" title="Click to clear all">clear</a><a onclick="TogetherJS(this); return false;">Start TogetherJS</a>
     <textarea id="html" value="" placeholder="HTML" autocapitalize="off" autofocus></textarea>
     <textarea id="css" value="" placeholder="CSS" autocapitalize="off"></textarea>
     <textarea id="js" value="" placeholder="JavaScript" autocapitalize="off"></textarea>
     <iframe id="preview"></iframe>
   </section>
+  <script src="https://togetherjs.com/togetherjs-min.js"></script>
 </body>
 </html>
