--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <section>
-    <h1>Sledit</h1><a class="clearLink" href="#" title="Click to clear all">clear</a><button onclick="TogetherJS(this); return false;">Start TogetherJS</button>
+    <h1>Sledit</h1><a class="clearLink" href="#" title="Click to clear all">clear</a><button onclick="TogetherJS(this); return false;">Collaborate</button>
     <textarea id="html" value="" placeholder="HTML" autocapitalize="off" autofocus></textarea>
     <textarea id="css" value="" placeholder="CSS" autocapitalize="off"></textarea>
     <textarea id="js" value="" placeholder="JavaScript" autocapitalize="off"></textarea>
